AUX_SOURCE_DIRECTORY(journal SOURCE_FILES_JOURNAL)
AUX_SOURCE_DIRECTORY(time SOURCE_FILES_TIME)
AUX_SOURCE_DIRECTORY(util SOURCE_FILES_UTIL)

ADD_LIBRARY(${PROJECT_NAME} SHARED
        ${SOURCE_FILES_JOURNAL}
        ${SOURCE_FILES_TIME}
        ${SOURCE_FILES_UTIL}
        )
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} fmt)
